1. fixed an issue where the icon for hiding the search field was misaligned at a certain screen width 2. on dashboard, depending on the screen width, the search field in navbar will either occupy place of social dropdown icons, push the social dropdown icons to the left or cover the whole width of navbar by taking place of the social dropdown icons and the logo. Also added transitions to the search field, the social dropdown icons and the logo in order to add animation to this process 3. in friends dropdown on dashboard, the text of ‘no new request’ and ‘recent join user’ is now similar to that of facebook 4. changed icon of 'my inbox' in sidebar 5. added a notification badge to 'my inbox' icon in sidebar 6. fixed an issue on profile page where hovering on info would push the content below it 7. headings on pages such as about us now don't have Roboto font 8. the design of settings page is now similar to browser tabs 9. increased top space of content below tabs on settings page 10. changed the text 'who looking for me' to 'who is looking for me' and 'who am i looking' to 'who am i looking for' on multiple pages with proper capitalization 11. fixed center alignment of text in 'accept' and 'remove' buttons on photo permission list page

--- a/public/user_assets/css/public-profile.css
+++ b/public/user_assets/css/public-profile.css
@@ -1,4 +1,3 @@
-
 body
 {
 	background-color: #e6e6e6;
@@ -349,6 +348,12 @@ ul.in_box_brdr li:hover {
 		            -ms-transition: all .2s ease-in-out;
 		             -o-transition: all .2s ease-in-out;
 		                transition: all .2s ease-in-out;
+	}
+
+	ul li.agea {
+		border: 1px solid transparent;
+		border-left: none;
+		border-right: none;
 	}
 	
 	ul li.agea:hover
